0.1.3
- added Search function
- fixed the low resolution preview image problem

0.1.2
- fixed bad view mode on aeon nox
- added force view option
- Fixed "Missed a Show?" Feature
- A few optimizations for RPI

0.1.1
- Fixed a few Banner/Backdrop Fetching Issues
- Fixed Livestream Exception
- Decreased Loading Time
- Experimental H264 MP4 Stream seams to work on Raspi[omxplayer] (Looks like the XBMC DVDPlayer is the issue)

0.1.0
- Streaming Video from http://tvthek.orf.at (mms)
- Experimental High Quality MP4 Streaming from http://tvthek.orf.at (rtmp)
- Livestream
- Missed Shows