@@ -1,6 +1,7 @@
 0.1.3
 - added Search function
 - fixed the low resolution preview image problem
+- added History for Search function
 
 0.1.2
 - fixed bad view mode on aeon nox
